--- a/frontend/src/pages/UniversityDetail.css
+++ b/frontend/src/pages/UniversityDetail.css
@@ -25,6 +25,21 @@
     line-height: 1.7;
 }
 
+.university-mission {
+    margin-top: -20px;
+    font-size: 1.2em;
+    width: 100%;
+    margin-right: 20px;
+    text-align: justify;
+    line-height: 1.7;
+}
+
+.university-mission-h2{
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
 .university-image {
     width: 40%;
     height: auto;
