--- a/frontend/src/pages/Result.css
+++ b/frontend/src/pages/Result.css
@@ -126,3 +126,69 @@
     margin-top: 20px;
 }
 
+.universities-section {
+    text-align: center;
+    margin-bottom: 40px;
+    margin-top: 50px;
+}
+
+.universities-section h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.universities-grid {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.university-card {
+    width: 200px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    background-color: #f9f9f9;
+}
+
+.university-card h3 {
+    margin-top: 0;
+    font-size: 18px;
+}
+
+.university-card img {
+    width: 100%;
+    height: 130px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.university-card p {
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.universities-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.universities-header h2 {
+    font-size: 28px;
+}
+
+.universities-header a {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #007BFF;
+    text-decoration: none;
+}
+
+.universities-header a:hover {
+    text-decoration: underline;
+}
+
+
