--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,4 +1,3 @@
-/* src/pages/Home.css */
 .home-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -57,6 +56,7 @@
 .about-section h2 {
     font-size: 28px;
     margin-bottom: -40px;
+    text-align: start;
 }
 
 .about-content {
@@ -97,6 +97,7 @@
 .cta-text h2 {
     font-size: 24px;
     margin-bottom: 10px;
+    text-align: start;
 }
 
 .cta-text p {
