--- a/frontend/src/components/CreateUniversity.css
+++ b/frontend/src/components/CreateUniversity.css
@@ -9,6 +9,7 @@ h2 {
     margin-bottom: 20px;
     font-size: 2.5rem;
     font-weight: bold;
+    text-align: center;
 }
 
 form {
@@ -83,16 +84,17 @@ select[multiple] {
     padding: 5px;
 }
 
+/* Media Queries */
 @media (max-width: 768px) {
     form {
         grid-template-columns: 1fr;
     }
 
-    .form-group {
+    .btn {
         width: 100%;
     }
 
-    .btn {
-        width: 100%;
+    h2 {
+        font-size: 2rem;
     }
 }
