--- a/frontend/src/pages/Contacts.css
+++ b/frontend/src/pages/Contacts.css
@@ -1,4 +1,3 @@
-/* src/pages/Contacts.css */
 .contacts-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -15,6 +14,7 @@
     font-weight: bold;
     margin-bottom: 20px;
     text-align: left;
+
 }
 
 .contacts-content {
@@ -35,4 +35,21 @@
 
 .contacts-info strong {
     color: #000;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .contacts-content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contacts-container h2 {
+        text-align: center;
+    }
+
+    .contacts-info {
+        text-align: center;
+        margin-bottom: 20px;
+    }
 }
