--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -55,8 +55,8 @@
 
 .about-section h2 {
     font-size: 28px;
-    margin-bottom: -40px;
     text-align: start;
+    margin-bottom: -40px;
 }
 
 .about-content {
@@ -136,6 +136,10 @@
     background-color: #f9f9f9;
 }
 
+.university-card a{
+    text-decoration: none;
+}
+
 .university-card h3 {
     margin-top: 0;
     font-size: 18px;
@@ -172,7 +176,61 @@
 }
 
 .universities-header a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 
+/* Медиазапросы для адаптивности */
+@media (max-width: 768px) {
+    .hero-section, .about-content, .cta-section {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .hero-text, .cta-text, .about-text {
+        max-width: 100%;
+    }
+
+    .hero-image img, .about-image img, .cta-image img {
+        width: 100%;
+    }
+
+    .universities-grid {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .university-card {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .hero-text h1, .cta-text h2, .about-section h2 {
+        font-size: 24px;
+    }
+
+    .about-section h2 {
+        margin-bottom: 10px;
+}
+
+
+    .hero-text p, .cta-text p, .about-text p {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 480px) {
+    .primary-button {
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    .hero-text h1, .cta-text h2, .about-section h2 {
+        font-size: 20px;
+    }
+
+
+    .hero-text p, .cta-text p, .about-text p {
+        font-size: 14px;
+    }
+}
