--- a/frontend/src/pages/Result.css
+++ b/frontend/src/pages/Result.css
@@ -125,71 +125,33 @@
     margin-top: 20px;
 }
 
-.universities-section {
-    text-align: center;
-    margin-bottom: 40px;
-    margin-top: 50px;
-}
-
-.universities-section h2 {
-    font-size: 28px;
+.recommended-universities {
     margin-bottom: 20px;
 }
 
-.universities-grid {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 20px; /* Добавляем отступы между карточками */
-}
-
-.university-card {
-    width: calc(25% - 20px); /* Обеспечиваем 4 карточки в строке с учетом отступов */
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 10px;
-    text-align: center;
-    background-color: #f9f9f9;
-}
-
-.university-card h3 {
-    margin-top: 0;
-    font-size: 18px;
-}
-
-.university-card img {
-    width: 100%;
-    height: 130px;
-    border-radius: 10px;
+.recommended-universities h3 {
+    font-size: 20px;
     margin-bottom: 10px;
 }
 
-.university-card p {
-    margin-top: 10px;
-    font-size: 14px;
+.recommended-universities ul {
+    list-style: none;
+    padding: 0;
 }
 
-.universities-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.recommended-universities li {
     margin-bottom: 20px;
 }
 
-.universities-header h2 {
-    font-size: 28px;
-}
-
-.universities-header a {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #007BFF;
+.recommended-universities a {
     text-decoration: none;
+    color: #007BFF;
 }
 
-.universities-header a:hover {
+.recommended-universities a:hover {
     text-decoration: underline;
 }
+
 
 /* Адаптивные стили */
 @media (max-width: 1024px) {
